adds rmw-cyclonedds-cpp useful in #4 and part of #11; edits to README #11

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -17,6 +17,7 @@ ENV COLCON_PREFIX_PATH=/opt/ros/${ROS_DISTRO}
 ENV LD_LIBRARY_PATH=/opt/ros/${ROS_DISTRO}/lib
 ENV PATH=/opt/ros/${ROS_DISTRO}/bin:$PATH
 ENV PYTHONPATH=/opt/ros/${ROS_DISTRO}/lib/python3.10/site-packages
+ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
 ENV ROS_PYTHON_VERSION=3
 ENV ROS_VERSION=2
 
@@ -86,7 +87,8 @@ RUN apt-get update -q && add-apt-repository universe && \
     ros-${ROS_DISTRO}-geographic-msgs \
     ros-${ROS_DISTRO}-diagnostic-updater \
     ros-${ROS_DISTRO}-robot-localization \
-    ros-${ROS_DISTRO}-common-interfaces && \
+    ros-${ROS_DISTRO}-common-interfaces \
+    ros-${ROS_DISTRO}-rmw-cyclonedds-cpp && \
     rm -rf /var/lib/apt/lists/*
 
 RUN rosdep init && rosdep update --rosdistro $ROS_DISTRO
