@nikk-nikaznan and @mxochicale debugged and make vscode and devcntaoiner work; and moved files to docs/docker #11

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -17,7 +17,6 @@ ENV COLCON_PREFIX_PATH=/opt/ros/${ROS_DISTRO}
 ENV LD_LIBRARY_PATH=/opt/ros/${ROS_DISTRO}/lib
 ENV PATH=/opt/ros/${ROS_DISTRO}/bin:$PATH
 ENV PYTHONPATH=/opt/ros/${ROS_DISTRO}/lib/python3.10/site-packages
-ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
 ENV ROS_PYTHON_VERSION=3
 ENV ROS_VERSION=2
 
@@ -89,7 +88,11 @@ RUN apt-get update -q && add-apt-repository universe && \
     ros-${ROS_DISTRO}-robot-localization \
     ros-${ROS_DISTRO}-common-interfaces \
     ros-${ROS_DISTRO}-rmw-cyclonedds-cpp && \
+    # ros-${ROS_DISTRO}-common-interfaces && \
     rm -rf /var/lib/apt/lists/*
+
+ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
+
 
 RUN rosdep init && rosdep update --rosdistro $ROS_DISTRO
 
