remove irreleavan lines in Dockerfile and updates and tidies up READMEs and scripts and docker-compose.yml for launch and stop in terminal works #11

--- a/docs/docker/docker-compose.yml
+++ b/docs/docker/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: baseros2:latest
     container_name: baseros2_v0.0.1
     build:
-      context: ..
+      context: ../../
       # cache_from:
       #   - baseros2:latest
       dockerfile: .devcontainer/Dockerfile
