adding mac workaround

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,15 +1,18 @@
-FROM docker.io/nvidia/cuda:12.5.0-devel-ubuntu22.04
+FROM docker.io/nvidia/cuda:12.5.0-devel-ubuntu22.04 AS dev_container_auto_added_stage_label
 
+ENV LANG=C.UTF-8
 ENV DEBIAN_FRONTEND=noninteractive
 ARG USERNAME=root
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
 
-ENV QT_X11_NO_MITSHM 1
+# Disable GPU-specific variables on non-GPU platforms like macOS
+# This will be handled by build args or runtime settings.
 ENV NVIDIA_VISIBLE_DEVICES all
 ENV NVIDIA_DRIVER_CAPABILITIES \
-    ${NVIDIA_DRIVER_CAPABILITIES:+$NVIDIA_DRIVER_CAPABILITIES,}compute,video,utility,graphicsIES:+$NVIDIA_DRIVER_CAPABILITIES,}compute,video,utility,graphics
+    ${NVIDIA_DRIVER_CAPABILITIES:+$NVIDIA_DRIVER_CAPABILITIES,}compute,video,utility,graphics
 
+# General environment variables
 ENV PIP_ROOT_USER_ACTION=ignore
 ENV ROS_DISTRO=humble
 ENV AMENT_PREFIX_PATH=/opt/ros/${ROS_DISTRO}
@@ -25,13 +28,13 @@ RUN echo "Europe/London" > /etc/localtime ; echo "CUDA Version 12.5.0" > /usr/lo
 #############################
 # Install necessary libraries
 #############################
-RUN apt-get update -qq && apt-get install -y --no-install-recommends \
+RUN apt-get update -qq && \
+    apt-get install -y --no-install-recommends \
     build-essential \
     cmake \
     python3 \
     gdb \
     git \
-    git-core \
     bash-completion \
     openssh-client \
     python3-argcomplete \
@@ -50,8 +53,7 @@ RUN apt-get update -qq && apt-get install -y --no-install-recommends \
     libmagic-mgc \
     libmagic1 \
     software-properties-common \
-    curl \
-    bash-completion && \
+    curl && \
     rm -rf /var/lib/apt/lists/*
 
 ###########################
@@ -63,18 +65,21 @@ RUN pip3 install torch torchvision timm opencv-python transforms3d pyopengl setu
 ################
 # STEREOLABS ZED
 ################
-RUN wget -q -O ZED_SDK_Linux_Ubuntu22.run https://download.stereolabs.com/zedsdk/4.1/cu121/ubuntu22 && \
-    chmod +x ZED_SDK_Linux_Ubuntu22.run ; ./ZED_SDK_Linux_Ubuntu22.run silent skip_cuda && \
-    ln -sf /lib/x86_64-linux-gnu/libusb-1.0.so.0 /usr/lib/x86_64-linux-gnu/libusb-1.0.so && \
-    rm ZED_SDK_Linux_Ubuntu22.run && \
-    rm -rf /var/lib/apt/lists/*
-
-RUN mkdir -p /root/Documents/ZED/
+# Check architecture and skip ZED SDK installation if not compatible
+# RUN if [ "$(uname -m)" != "aarch64" ]; then \
+#       echo "Skipping ZED SDK installation: Architecture is not ARM-based."; \
+#     else \
+#       wget -q -O ZED_SDK_Linux_Ubuntu22.run https://download.stereolabs.com/zedsdk/4.1/cu121/ubuntu22 && \
+#       chmod +x ZED_SDK_Linux_Ubuntu22.run && \
+#       ./ZED_SDK_Linux_Ubuntu22.run silent skip_cuda && \
+#       rm ZED_SDK_Linux_Ubuntu22.run; \
+#     fi && \
+#     rm -rf /var/lib/apt/lists/*
+# RUN mkdir -p /root/Documents/ZED/
 
 ######
 # ROS 
 ######
-
 RUN apt-get update -q && add-apt-repository universe && \
     curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg && \
     echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null && \
@@ -88,25 +93,12 @@ RUN apt-get update -q && add-apt-repository universe && \
     ros-${ROS_DISTRO}-geographic-msgs \
     ros-${ROS_DISTRO}-diagnostic-updater \
     ros-${ROS_DISTRO}-robot-localization \
-    ros-${ROS_DISTRO}-common-interfaces && \
+    ros-${ROS_DISTRO}-common-interfaces \
+    ros-${ROS_DISTRO}-rmw-cyclonedds-cpp && \
     rm -rf /var/lib/apt/lists/*
+
+ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
 
 RUN rosdep init && rosdep update --rosdistro $ROS_DISTRO
 
-# COPY *neural_depth_2.0_2080.model /usr/local/zed/resources/neural_depth_2.0.model
-# COPY *.8600_timing_cache /usr/local/zed/resources/.8600_timing_cache
-# COPY *.neural_depth_2.0.model_optimized-fbcbl-1-75-12020-8801-8600-25-384-6144-48-64-512-72-0-0e53-512 /usr/local/zed/resources/.neural_depth_2.0.model_optimized-fbcbl-1-75-12020-8801-8600-25-384-6144-48-64-512-72-0-0e53-512
-# COPY *SN21837864.conf /usr/local/zed/settings/
-
-
-# Install gazebo
-# RUN wget https://packages.osrfoundation.org/gazebo.gpg -O /usr/share/keyrings/pkgs-osrf-archive-keyring.gpg \
-#   && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/pkgs-osrf-archive-keyring.gpg] http://packages.osrfoundation.org/gazebo/ubuntu-stable $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/gazebo-stable.list > /dev/null \
-#   && apt-get update && apt-get install -q -y --no-install-recommends \
-#     ros-iron-gazebo* \
-#   && rm -rf /var/lib/apt/lists/*
-
-#...
-# Allow container to stop. See: https://github.com/microsoft/vscode-remote-release/issues/3512#issuecomment-1267053890
-# NOTE: Long interval is necessary so container is not closed during vscode initialization
 CMD while sleep 120 && ps aux | egrep 'vscode.*[b]ootstrap-fork.*extensionHost.*' > /dev/null; do :; done
