add comments where to exclude for mac

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,12 +8,14 @@
 	"workspaceFolder": "/workspace",
 	"containerEnv": {
 		"DISPLAY": ":0",
+		// comment out the following line on non-linux systems
 		"XAUTHORITY": "/root/.Xauthority"
 	},
 	"privileged": true,
 	"runArgs": [
 		"--rm",
 		"--shm-size=1g",
+		// comment out the following lines on non-linux systems
 		"--device", "nvidia.com/gpu=all",
 		"--volume=/tmp/.X11-unix:/tmp/.X11-unix",
 		"--volume=${localEnv:XAUTHORITY}:/root/.Xauthority"
