--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
 		"dockerfile": "Dockerfile",
 		"context": ".."
 	},
-	"mounts": ["source=${localWorkspaceFolder}/workspace,target=/workspace/,type=bind,consistency=cached"], 
+	"mounts": ["source=${localWorkspaceFolder}/workspace,target=/workspace,type=bind"],
 	"workspaceFolder": "/workspace",
 	"containerEnv": {
 		"DISPLAY": ":0",
@@ -15,9 +15,9 @@
 		"--rm",
 		"--shm-size=1g",
 		// comment out the following lines on non-linux systems
-		"--device", "nvidia.com/gpu=all",
-		"--volume=/tmp/.X11-unix:/tmp/.X11-unix",
-		"--volume=${localEnv:XAUTHORITY}:/root/.Xauthority"
+		// "--device", "nvidia.com/gpu=all",
+		// "--volume=/tmp/.X11-unix:/tmp/.X11-unix",
+		// "--volume=${localEnv:XAUTHORITY}:/root/.Xauthority"
 	],
 	"remoteUser": "root",
 	"containerUser": "root",
