adding the test ee msg

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 *.swp
-/build/
-/install/
-/log/
+.DS_Store
+workspace/build/
+workspace/install/
+workspace/log/
+workspace/src/build/
+workspace/src/install/
+workspace/src/log/
