--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"name": "ROS2",
+	"name": "base ROS2 with cuda-12.5.0-devel-ubuntu22.04",
 	"build": {
 		"dockerfile": "Dockerfile",
 		"context": ".."
@@ -14,6 +14,8 @@
 	"runArgs": [
 		"--rm",
 		"--shm-size=1g",
+		"--device-cgroup-rule=c *:* rmw",
+		"--device-cgroup-rule=c 189:* rwm",
 		"--runtime=nvidia",
 		"--gpus=all",
 		"--volume=/tmp/.X11-unix:/tmp/.X11-unix",
