--- a/workspace/src/eeg_node/eeg_msgs/package.xml
+++ b/workspace/src/eeg_node/eeg_msgs/package.xml
@@ -3,7 +3,7 @@
   <name>eeg_msgs</name>
   <version>0.0.0</version>
   <description>EEG message package</description>
-  <maintainer email="nik.k.nikaznan@outlook.com">root</maintainer>
+  <maintainer email="user@email.com">root</maintainer>
   <license>Apache-2.0</license>
 
   <!-- Build dependencies -->
