--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.io/nvidia/cuda:12.5.0-devel-ubuntu22.04 AS dev_container_auto_added_stage_label
+FROM docker.io/nvidia/cuda:12.5.0-devel-ubuntu22.04
 
 ENV LANG=C.UTF-8
 ENV DEBIAN_FRONTEND=noninteractive
@@ -11,6 +11,7 @@ ARG USER_GID=$USER_UID
 ENV NVIDIA_VISIBLE_DEVICES all
 ENV NVIDIA_DRIVER_CAPABILITIES \
     ${NVIDIA_DRIVER_CAPABILITIES:+$NVIDIA_DRIVER_CAPABILITIES,}compute,video,utility,graphics
+ENV QT_X11_NO_MITSHM 1
 
 # General environment variables
 ENV PIP_ROOT_USER_ACTION=ignore
@@ -68,12 +69,12 @@ RUN pip3 install torch torchvision timm opencv-python transforms3d pyopengl setu
 # STEREOLABS ZED
 ################
 # comment out the following line on non-GPU platforms
-RUN wget -q -O ZED_SDK_Linux_Ubuntu22.run https://download.stereolabs.com/zedsdk/4.1/cu121/ubuntu22 && \
-    chmod +x ZED_SDK_Linux_Ubuntu22.run ; ./ZED_SDK_Linux_Ubuntu22.run silent skip_cuda && \
-    ln -sf /lib/x86_64-linux-gnu/libusb-1.0.so.0 /usr/lib/x86_64-linux-gnu/libusb-1.0.so && \
-    rm ZED_SDK_Linux_Ubuntu22.run && \
-    rm -rf /var/lib/apt/lists/*
-RUN mkdir -p /root/Documents/ZED/
+# RUN wget -q -O ZED_SDK_Linux_Ubuntu22.run https://download.stereolabs.com/zedsdk/4.1/cu121/ubuntu22 && \
+#     chmod +x ZED_SDK_Linux_Ubuntu22.run ; ./ZED_SDK_Linux_Ubuntu22.run silent skip_cuda && \
+#     ln -sf /lib/x86_64-linux-gnu/libusb-1.0.so.0 /usr/lib/x86_64-linux-gnu/libusb-1.0.so && \
+#     rm ZED_SDK_Linux_Ubuntu22.run && \
+#     rm -rf /var/lib/apt/lists/*
+# RUN mkdir -p /root/Documents/ZED/
 
 ######
 # ROS 
