--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,7 @@
 	"runArgs": [
 		"--rm",
 		"--shm-size=1g",
-		// comment out the following lines on non-linux systems
+		// comment out the following lines on non-linux systems (line 18 to 23)
 		"--device-cgroup-rule=c *:* rmw",
 		"--device-cgroup-rule=c 189:* rwm",
 		"--runtime=nvidia",
