update Dockerfile and devcontainer.json for CUDA 12.6 and ROS2 jazzy; add requirements.txt

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,22 +1,32 @@
-FROM docker.io/nvidia/cuda:12.5.0-devel-ubuntu22.04
+ARG UBUNTU_YEAR_RELEASE=24
+ARG UBUNTU_MONTH_RELEASE=04
+ARG CUDA_MAJOR=12
+ARG CUDA_MINOR=6.0
 
-ENV DEBIAN_FRONTEND=noninteractive
+FROM docker.io/nvidia/cuda:${CUDA_MAJOR}.${CUDA_MINOR}-devel-ubuntu${UBUNTU_YEAR_RELEASE}.${UBUNTU_MONTH_RELEASE}
+
+ARG UBUNTU_YEAR_RELEASE=24
 ARG USERNAME=root
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
+ARG CUDA_MAJOR=12
+ARG CUDA_MINOR=6.0
+ARG ZED_SDK_MAJOR=5
+ARG ZED_SDK_MINOR=0
 
+ENV DEBIAN_FRONTEND=noninteractive
 ENV QT_X11_NO_MITSHM 1
 ENV NVIDIA_VISIBLE_DEVICES all
 ENV NVIDIA_DRIVER_CAPABILITIES \
     ${NVIDIA_DRIVER_CAPABILITIES:+$NVIDIA_DRIVER_CAPABILITIES,}compute,video,utility,graphics
 
 ENV PIP_ROOT_USER_ACTION=ignore
-ENV ROS_DISTRO=humble
+ENV ROS_DISTRO=jazzy
 ENV AMENT_PREFIX_PATH=/opt/ros/${ROS_DISTRO}
 ENV COLCON_PREFIX_PATH=/opt/ros/${ROS_DISTRO}
 ENV LD_LIBRARY_PATH=/opt/ros/${ROS_DISTRO}/lib
 ENV PATH=/opt/ros/${ROS_DISTRO}/bin:$PATH
-ENV PYTHONPATH=/opt/ros/${ROS_DISTRO}/lib/python3.10/site-packages
+ENV PYTHONPATH=/opt/ros/${ROS_DISTRO}/lib/python3.12/site-packages
 ENV ROS_PYTHON_VERSION=3
 ENV ROS_VERSION=2
 
@@ -45,7 +55,7 @@ RUN apt-get update -qq && apt-get install -y --no-install-recommends \
     sudo \
     libpng-dev \
     libgomp1 \
-    python3-venv \
+    python3.12-venv \
     file \
     libmagic-mgc \
     libmagic1 \
@@ -54,25 +64,18 @@ RUN apt-get update -qq && apt-get install -y --no-install-recommends \
     bash-completion && \
     rm -rf /var/lib/apt/lists/*
 
-###########################
-# Install pip requirements
-###########################
-RUN pip3 install --upgrade pip==24.1
-RUN pip3 install torch torchvision timm opencv-python transforms3d pyopengl setuptools==58.2.0 albumentations --no-binary albumentations,qudida
 
-################
-# STEREOLABS ZED
-################
-RUN wget -q -O ZED_SDK_Linux_Ubuntu22.run https://download.stereolabs.com/zedsdk/4.1/cu121/ubuntu22 && \
-    chmod +x ZED_SDK_Linux_Ubuntu22.run ; ./ZED_SDK_Linux_Ubuntu22.run silent skip_cuda && \
-    ln -sf /lib/x86_64-linux-gnu/libusb-1.0.so.0 /usr/lib/x86_64-linux-gnu/libusb-1.0.so && \
-    rm ZED_SDK_Linux_Ubuntu22.run && \
-    rm -rf /var/lib/apt/lists/*
-RUN mkdir -p /root/Documents/ZED/
+############################
+# Create virtual environment
+############################
+ENV VIRTUAL_ENV=/root/venv
+RUN python3 -m venv $VIRTUAL_ENV --system-site-packages --symlinks
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+ENV PYTHONPATH="$VIRTUAL_ENV/lib/python3.12/site-packages:$PYTHONPATH"
 
-######
+###########################
 # ROS 
-######
+###########################
 RUN apt-get update -q && add-apt-repository universe && \
     curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg && \
     echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null && \
@@ -87,14 +90,30 @@ RUN apt-get update -q && add-apt-repository universe && \
     ros-${ROS_DISTRO}-diagnostic-updater \
     ros-${ROS_DISTRO}-robot-localization \
     ros-${ROS_DISTRO}-common-interfaces \
-    ros-${ROS_DISTRO}-rmw-cyclonedds-cpp && \
+    ros-${ROS_DISTRO}-rmw-cyclonedds-cpp \
+    ros-${ROS_DISTRO}-rosbag2-storage-mcap && \
     rm -rf /var/lib/apt/lists/*
 
-ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
-
+# ENV RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
 
 RUN rosdep init && rosdep update --rosdistro $ROS_DISTRO
 
+###########################
+# Install pip requirements
+###########################
+COPY requirements.txt /tmp/requirements.txt
+RUN pip3 install -r /tmp/requirements.txt   
+
+################
+# STEREOLABS ZED
+################
+RUN wget -O ZED_SDK_Linux.run https://download.stereolabs.com/zedsdk/${ZED_SDK_MAJOR}.${ZED_SDK_MINOR}/cu${CUDA_MAJOR}/ubuntu${UBUNTU_YEAR_RELEASE} && \
+    chmod +x ZED_SDK_Linux.run ; ./ZED_SDK_Linux.run silent skip_cuda && \
+    ln -sf /lib/x86_64-linux-gnu/libusb-1.0.so.0 /usr/lib/x86_64-linux-gnu/libusb-1.0.so && \
+    rm ZED_SDK_Linux.run && \
+    rm -rf /var/lib/apt/lists/*
+RUN mkdir -p /root/Documents/ZED/
+
 # Allow container to stop. See: https://github.com/microsoft/vscode-remote-release/issues/3512#issuecomment-1267053890
 # NOTE: Long interval is necessary so container is not closed during vscode initialization
-CMD while sleep 120 && ps aux | egrep 'vscode.*[b]ootstrap-fork.*extensionHost.*' > /dev/null; do :; done
+# CMD while sleep 120 && ps aux | egrep 'vscode.*[b]ootstrap-fork.*extensionHost.*' > /dev/null; do :; done
